--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.16",
+    "happy-dom": "^13.2.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8",
